# typst-bible-plugin

./: .gitignore  Cargo.toml  README.md  README.typ  bible.typ  conf.typ  main.typ  run.sh  test.typ
src/: bible.rs  lib.rs  nt_tree.json
wasm_macro/: Cargo.toml
