[package]
name = "bible"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
resolver = "2"
members = [
	# "typst_plugin",
	"wasm_macro",
]

[dependencies]
serde_json = "1.0.127"
wasm_macro = { path = "./wasm_macro"}

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
